supp duplication_méthode